init : tailwind init

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,3 +1,10 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
+
+body {
+  @apply flex flex-col items-center;
+}
+#root {
+  @apply w-full;
+}
